@@ -33,7 +33,7 @@
 /doc/decode.c
 /doc/example-toascii.c
 /doc/example-tounicode.c
-/doc/idn2--help.texi
+/doc/idn2-help.texi
 /doc/idn2.1
 /doc/libidn2.aux
 /doc/libidn2.cp
